# chess-engine

./: CMakeLists.txt  README.md  main.cpp
chess_engine/: CMakeLists.txt  main.cpp
chess_engine/include/: board.h
chess_engine/src/: board.cpp  move.cpp
include/: bitboard.h  board.h  board_utils.h
src/: bitboard.cpp  board.cpp  board_utils.cpp  evaluation.cpp  move.cpp  perft.cpp
